Base Init, Widget Add

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ bUseUnsortedMenus=False
 고급=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UMG
+ContentBrowserTab1.SelectedPaths=/Game/ProjectSetting
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
@@ -203,7 +203,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/BaseLevel
 
 [ModuleFileTracking]
-ProjectD.TimeStamp=2023.04.22-13.23.15
+ProjectD.TimeStamp=2023.04.23-12.17.51
 ProjectD.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.03.27-10.37.06
 StorageServerClient.LastCompileMethod=Unknown
@@ -1223,9 +1223,13 @@ MovieSceneCapture.TimeStamp=2023.03.27-10.37.01
 MovieSceneCapture.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2023.03.27-10.37.06
 UATHelper.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.03.27-10.36.59
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.03.27-10.37.02
+NullDrv.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1999,14 +2003,34 @@ StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Events=True
 DMainCharacter_BP_C.TransformCommon=True
 DMainCharacter_BP_C.Networking=True
+DPlayerController_BP_C.PlayerController=True
+DPlayerController_BP_C.Tick=True
+DPlayerController_BP_C.Cheat Manager=True
+DPlayerController_BP_C.MouseInterface=True
+DPlayerController_BP_C.Game=True
+DPlayerController_BP_C.Input=True
+DPlayerController_BP_C.WorldPartition=True
+DPlayerController_BP_C.Controller=True
+DPlayerController_BP_C.Replication=True
+DPlayerController_BP_C.Actor=True
+DPlayerController_BP_C.HLOD=True
+DPlayerController_BP_C.Physics=True
+DPlayerController_BP_C.Events=True
+DCharacter_C.Networking=True
+DGameModeBase_BP_C.Tick=True
+DGameModeBase_BP_C.Classes=True
+DGameModeBase_BP_C.Game=True
+DGameModeBase_BP_C.GameMode=True
+DGameModeBase_BP_C.Physics=True
+DGameModeBase_BP_C.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.Margin\" "
-Widget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
-Visual="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
+Widget=
+Visual=
 Object=
 ProjectPackagingSettings="\"Object.Packaging.IniKeyDenylist\" \"Object.Packaging.IniSectionDenylist\" \"Object.Packaging.DirectoriesToAlwaysCook\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
@@ -2033,6 +2057,15 @@ FractureModeSettings="\"Object.Fracture Mode.Fracture Mode|Convex Generation Def
 EditableTextBox="\"Object.Appearance.WidgetStyle.TextStyle\" \"Object.Appearance.WidgetStyle.TextStyle.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
+DPlayerController_BP_C="\"Object.MouseInterface.ClickEventKeys\" "
+DPlayerController="\"Object.MouseInterface.ClickEventKeys\" "
+PlayerController="\"Object.MouseInterface.ClickEventKeys\" "
+Controller="\"Object.MouseInterface.ClickEventKeys\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2048,24 +2081,27 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BaseLevel
-MRUItem1=/Game/DMainCharacter_BP
-MRUItem2=/Game/UMG/BaseHud_BP
-MRUItem3=/Game/ProjectSetting/MyDHUD
-MRUItem4=/Game/UMG/Hud_BP
-MRUItem5=/Game/UMG/MyBaseHud
-MRUItem6=/Game/ProjectSetting/MyProjectDPawn
-MRUItem7=/Game/ProjectSetting/MyProjectDGameMode
-MRUItem8=/Game/ProjectSetting/ProjectDGameMode
-MRUItem9=/Game/ProjectSetting/DHUD
-MRUItem10=/Game/ProjectSetting/ProjectDPawn
-MRUItem11=/Game/ProjectDPawn
-MRUItem12=/Game/Resources/MoneyMat1
-MRUItem13=/Game/Resources/CharacterMat1
-MRUItem14=/Game/DCharacter
+MRUItem0=/Game/ProjectSetting/DGameModeBase_BP
+MRUItem1=/Game/ProjectSetting/DPlayerController_BP
+MRUItem2=/Game/DMainCharacter_BP
+MRUItem3=/Game/DCharacter
+MRUItem4=/Game/BaseLevel
+MRUItem5=/Game/UMG/BaseHud_BP
+MRUItem6=/Game/ProjectSetting/MyDHUD
+MRUItem7=/Game/UMG/Hud_BP
+MRUItem8=/Game/UMG/MyBaseHud
+MRUItem9=/Game/ProjectSetting/MyProjectDPawn
+MRUItem10=/Game/ProjectSetting/MyProjectDGameMode
+MRUItem11=/Game/ProjectSetting/ProjectDGameMode
+MRUItem12=/Game/ProjectSetting/DHUD
+MRUItem13=/Game/ProjectSetting/ProjectDPawn
+MRUItem14=/Game/ProjectDPawn
+MRUItem15=/Game/Resources/MoneyMat1
+MRUItem16=/Game/Resources/CharacterMat1
 
 [PlacementMode]
 RecentlyPlaced=/Game/DMainCharacter_BP.DMainCharacter_BP;
+RecentlyPlaced=/Game/DCharacter.DCharacter;
 RecentlyPlaced=/Game/ProjectSetting/ProjectDPawn.ProjectDPawn;
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
 RecentlyPlaced=/Game/Resources/MoneyMat1.MoneyMat1;
@@ -2092,6 +2128,9 @@ RecentlyPlaced=/Game/Resources/CharacterMat1.CharacterMat1;
 /Game/ProjectSetting/MyProjectDGameMode.MyProjectDGameMode=1
 /Game/UMG/MyBaseHud.MyBaseHud=1
 /Game/UMG/BaseHud_BP.BaseHud_BP=1
+/Game/DMainCharacter_BP.DMainCharacter_BP=1
+/Game/ProjectSetting/DPlayerController_BP.DPlayerController_BP=1
+/Game/DCharacter.DCharacter=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2371,6 +2410,7 @@ TreeViewWidth=0.300000
 StaticMeshActor.Materials=False
 GameMapsSettings.DefaultModes=True
 DHUD_C.Tick=False
+DMainCharacter_BP_C.Actor=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2453,7 +2493,7 @@ WmfMediaSettings=True
 InstalledPlugins=VisualStudioTools
 
 [RootWindow]
-ScreenPosition=X=376.000 Y=34.000
+ScreenPosition=X=591.000 Y=247.000
 WindowSize=X=1896.000 Y=1080.000
 InitiallyMaximized=False
 
@@ -2562,6 +2602,7 @@ MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [Directories2]
 UNR=../../../../../UnrealProject/ProjectD/Content
