--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/BaseLevel.BaseLevel
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/ProjectSetting/MyProjectDGameMode.MyProjectDGameMode_C
+GlobalDefaultGameMode=/Game/ProjectSetting/DGameModeBase_BP.DGameModeBase_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
